# ITQ_robby

./: README.md  robby_sources.repos
debug_logs/: debug_log_20260508_112554.csv  debug_log_20260508_142210.csv  debug_log_20260508_143244.csv
maps/: arena_map.pgm  arena_map.yaml
src/: README.md
src/docs/: robby_master_thesis.aux  robby_master_thesis.out  robby_master_thesis.tex  robby_master_thesis.toc
src/robby_control/: package.xml  setup.cfg  setup.py
src/robby_control/config/: ackermann_cmd.yaml  ackermann_controller_bridge.yaml  ackermann_joint_state_bridge.yaml  four_wis4wid_cmd.yaml  joint_command_bridge.yaml  swerve_cmd.yaml  swerve_odometry.yaml
src/robby_control/launch/: ackermann.launch.py  ackermann_visualization.launch.py  four_wis4wid.launch.py  odometry.launch.py  swerve.launch.py
src/robby_control/resource/: robby_control
src/robby_control/robby_control/: __init__.py  ackermann_cmd_node.py  ackermann_controller_bridge.py  ackermann_joint_state_bridge.py  four_wis4wid_cmd_node.py  swerve_odometry_node.py
src/robby_control/src/robby_control/: __init__.py  controller.py  joint_command_bridge.py  swerve_cmd_node.py  swerve_controller.py  swerve_kinematic_model.py
src/robby_debug/: package.xml  setup.cfg  setup.py
src/robby_debug/launch/: debug_tools.launch.py
src/robby_debug/resource/: robby_debug
src/robby_debug/robby_debug/: debug_log_node.py
src/robby_debug/src/robby_debug/: __init__.py  debug_log_node.py  plot_debug_csv.py
src/robby_description/: CMakeLists.txt  package.xml
src/robby_description/launch/: display.launch  display.launch.py  gazebo.launch
src/robby_description/meshes/: back_left_steer.STL  back_left_wheel.STL  back_right_steer.STL  back_right_wheel.STL  base_link.STL  camera_link.STL  front_left_steer.STL  front_left_wheel.STL  front_right_steer.STL  front_right_wheel.STL
src/robby_description/rviz/: display.rviz
src/robby_description/urdf/: Robby_v1.camera.xacro  Robby_v1.core.xacro  Robby_v1.gazebo.xacro  Robby_v1.lidar.xacro  Robby_v1.urdf  Robby_v1.urdf.xacro  Robot_1 v2.csv
src/robby_gazebo/: CMakeLists.txt  package.xml
src/robby_gazebo/config/: ros2_controllers.yaml  sim_swerve.yaml
src/robby_gazebo/launch/: sim_4wis4wid.launch.py  sim_4wis4wid_mapping.launch.py  sim_ackermann.launch.py  sim_swerve.launch.py  sim_swerve_mapping.launch.py
src/robby_gazebo/scripts/: sim_with_logging
src/robby_gazebo/worlds/: empty.world.sdf  mapping_arena.world.sdf
src/robby_localization/: package.xml  setup.cfg  setup.py
src/robby_localization/config/: ekf.yaml  localization.yaml  localization_inputs.yaml  nav2.yaml  slam_toolbox.yaml
src/robby_localization/launch/: evaluation.launch.py  localization.launch.py  localization_rviz.launch.py  nav2.launch.py  slam_mapping.launch.py
src/robby_localization/resource/: robby_localization
src/robby_localization/robby_localization/: __init__.py  imu_preprocessor_node.py  localization_input_node.py  state_error_monitor_node.py
src/robby_localization/rviz/: localization.rviz
src/robby_localization/src/robby_localization/: __init__.py  localization_input_node.py  state_error_monitor_node.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: joy_teleop.yaml  ros2_controllers.yaml
src/robot_bringup/launch/: real.launch.py  sim.launch.py
src/robot_bringup/src/: js_publisher.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: view_robot.launch.py
src/robot_description/rviz/: robot.rviz
src/robot_description/urdf/: robot.urdf.xacro
src/robot_hardware/: CMakeLists.txt  package.xml  robot_hardware.xml
src/robot_hardware/include/robot_hardware/: serial_hardware_interface.hpp
src/robot_hardware/src/: serial_hardware_interface.cpp
